# simple_parallel

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dependencies.cmake  Doxyfile  Jenkinsfile  ProjectOptions.cmake  README.md
cmake/: Cache.cmake  CompilerWarnings.cmake  InterproceduralOptimization.cmake  Linker.cmake  PreventInSourceBuilds.cmake  StaticAnalyzers.cmake  simple_parallelConfig.cmake.in  simple_parallel_config.h.in
configured_files/: CMakeLists.txt  c_omp_dynamic_schedule_buffer_size_config.h.in  config.h.in  include_concurrentqueue.h.in  simple_parallel_config.h.in
example/: CMakeLists.txt  c_example.c  fortran_example.f90
include/simple_parallel/: advance.h  async_util.h  detail.h  dynamic_schedule.h  main.h  master.h  mpi_util.h  omp_dynamic_schedule.h  simple_parallel.h  worker.h
include/simple_parallel/c/: c_binding.h  c_dynamic_schedule_binding.h
include/simple_parallel/cxx/: dynamic_schedule.h  lib_visibility.h  simple_parallel.h  types_fwd.h
include/simple_parallel/fortran/: c_cxx_manipulate_fortran_global_array.h  fortran_global_matrix_c_cxx_helper.h  global_matrix_mpi_reduce.h  global_matrix_set_zero.h  gss_dynamic_schedule_begin.h  gss_dynamic_schedule_end.h  parallel_begin.h  parallel_end.h
include/simple_parallel_for_c/: lambda.h  main.h  omp_dynamic_schedule.h  simple_parallel_for_c.h
src/: CMakeLists.txt
src/c_binding/: CMakeLists.txt  c_binding.cc  c_dynamic_schedule_binding.cc
src/dynamic_patch_elf/: CMakeLists.txt  patch_elf.cc
src/example/: CMakeLists.txt  c_example.c  cxx_example.cc  example.cc
src/example_for_c/: CMakeLists.txt  example_for_c.c
src/fortran_binding/: CMakeLists.txt  fortran_binding.cc  fortran_binding.f90  fortran_dynamic_schedule_binding.cc  fortran_dynamic_schedule_binding.f90
src/simple_parallel/: CMakeLists.txt  advance.cc  bigmpi.cc  detail.cc  detect_page_size.cc  dynamic_schedule.cc  init.cc  leader.cc  master.cc  override_main.cc  pagemap.cc  s_p_launcher.sh.in  simple_parallel.cc  sync_fortran_global_vars.cc  worker.cc
src/simple_parallel/include/: bigmpi.h  fake_main.h  init.h  internal_types.h  leader.h  pagemap.h  sync_fortran_global_vars.h  worker.h
src/simple_parallel/include/simple_parallel/: advance.h  mpi_util.h  simple_parallel.h
src/simple_parallel_for_c/: CMakeLists.txt  omp_dynamic_schedule.cc  simple_parallel_for_c.cc
src/simple_parallel_for_c/include/simple_parallel_for_c/: lambda.h  main.h  simple_parallel_for_c.h
src/try_compile/: map_fixed_noreplace.c  test_blocks.c  test_include_concurrentqueue.cc  test_include_concurrentqueue_concurrentqueue.cc  test_include_moodycamel_concurrentqueue.cc  test_nested_function.c
