set(MI_BUILD_SHARED OFF)
set(MI_BUILD_STATIC OFF)
set(MI_BUILD_OBJECT ON)
add_subdirectory(mimalloc_for_simple_parallel SYSTEM)

add_subdirectory(dynamic_patch_elf)
add_subdirectory(simple_parallel)
if(SIMPLE_PARALLEL_C_BINDING)
    message(STATUS "simple_parallel Enable C binding")
    add_subdirectory(c_binding)
endif()
if(SIMPLE_PARALLEL_Fortran_BINDING)
    message(STATUS "simple_parallel Enable Fortran binding")
    add_subdirectory(fortran_binding)
endif()

if(SIMPLE_PARALLEL_ENABLE_EXAMPLES)
    add_subdirectory(example)
endif()