set(MI_BUILD_SHARED OFF)
set(MI_BUILD_STATIC OFF)
set(MI_BUILD_OBJECT ON)
set(MI_BUILD_TESTS OFF)
set(MI_OVERRIDE ON)
add_subdirectory(mimalloc_for_simple_parallel SYSTEM)
add_library(simple_parallel::mimalloc-obj ALIAS mimalloc-obj)

add_subdirectory(simple_parallel)
if(SIMPLE_PARALLEL_C_BINDING)
    message(STATUS "simple_parallel Enable C binding")
    add_subdirectory(c_binding)
endif()
if(SIMPLE_PARALLEL_Fortran_BINDING)
    message(STATUS "simple_parallel Enable Fortran binding")
    add_subdirectory(fortran_binding)
endif()
